--- a/src/app/playlist/playlist.component.scss
+++ b/src/app/playlist/playlist.component.scss
@@ -7,7 +7,7 @@ $medium-up-screen-width: 768px;
 	margin-top: -3rem;
 }
 
-.pl {
+ul {
 	list-style: none;
 	-webkit-padding-start: 0;
 	-moz-padding-start: 0;
