feat: Implement truncate text pipe

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,11 @@
-@import '../styles/material';
+@import '../styles/settings';
+
 header {
-    padding: 4rem 1rem 6rem;
-    background: #3feca5;
-    h1 {
-        padding-left: 24px;
-        color: $oil;
-        font-size: 3rem;
-    }
+	padding: 4rem 1rem 6rem;
+	background: $green;
+	h1 {
+		padding-left: 24px;
+		color: $oil;
+		font-size: 3rem;
+	}
 }
