--- a/src/styles/foundation.scss
+++ b/src/styles/foundation.scss
@@ -4,6 +4,7 @@
 
 @include foundation-global-styles;
 @include foundation-grid;
+@include foundation-typography;
 // @include foundation-flex-grid;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
