--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -13,42 +13,17 @@ body {
 
 /*
 =========================================
-FORMS
-=========================================*/
-
-.mat-input-container.ng-invalid md-hint {
-	color: map-get($warn, A400);
-}
-
-.card__form {
-	md-input-container {
-		width: 100%;
-		margin-bottom: 0.4rem;
-	}
-}
-
-
-/*
-=========================================
-SNACKBARS
-=========================================*/
-
-.mat-simple-snackbar:first-letter {
-	text-transform: uppercase;
-}
-
-.error {
-	.mat-simple-snackbar {
-		color: #FF5252;
-	}
-}
-
-
-/*
-=========================================
 CARDS
 =========================================*/
 
-md-card {
+.mat-card {
+	background: #FFF;
+	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+	transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+	will-change: box-shadow;
+	display: block;
+	position: relative;
+	padding: 24px;
+	border-radius: 2px;
 	margin-bottom: 1rem;
 }
