feat: Implement pagination

--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,16 +1,26 @@
 <div class="row pl-container">
 	<div class="small-12 columns">
-		<div class="mat-card">
+		<div class="pl-card">
 			<h2>My playlist</h2>
-			<nav>
-				<ul class="pl__pagination">
-					<li *ngFor="let p of pages; let i = index;">
-						<a [routerLink]="['/playlist', i+1]">{{ i+1 }}</a>
-					</li>
-				</ul>
-			</nav>
+			<ul class="pl__pagination" role="navigation" aria-label="Pagination">
+				<li [class.disabled]="isFirstPage">
+					<a aria-label="Previous page" (click)="goToPrev()"><i class="material-icons">keyboard_arrow_left</i>Prev</a>
+				</li>
+				<li *ngFor="let p of pages; let i = index;" class="pl__pagination__li">
+					<a [routerLink]="['/playlist', i+1]" routerLinkActive="current" class="pl__page-index">{{ i+1 }}</a>
+				</li>
+				<li [class.disabled]="isLastPage">
+					<a aria-label="Next page" (click)="goToNext()">Next<i class="material-icons">keyboard_arrow_right</i></a>
+				</li>
+			</ul>
 			<ul class="pl">
 				<li *ngFor="let video of page" class="pl__item">
+					<div class="pl__snippet">
+						<h4>
+							<a [routerLink]="['/video', video.snippet.resourceId.videoId]">{{ video.snippet.title }}</a>
+						</h4>
+						<span class="pl__pubdate">Published on {{ video.snippet.publishedAt | date }}</span>
+					</div>
 					<a [routerLink]="['/video', video.snippet.resourceId.videoId]">
 						<picture>
 							<source media="(max-width: 481px)" srcset="{{ video.snippet.thumbnails.default.url }} 1x,
@@ -22,11 +32,18 @@
 							<img src="{{ video.snippet.thumbnails.medium.url }}" alt="{{ video.snippet.title }}">
 						</picture>
 					</a>
-					<h4>
-						<a [routerLink]="['/video', video.snippet.resourceId.videoId]">{{ video.snippet.title }}</a>
-					</h4>
-					<span class="pl__pubdate">Published on {{ video.snippet.publishedAt | date }}</span>
-					<p class="pl__desc">{{ video.snippet.description | myTruncate : 180 }}</p>
+					<p class="pl__desc" [class.hide]="video.snippet.description.length === 0">{{ video.snippet.description | myTruncate : 180 }}</p>
+				</li>
+			</ul>
+			<ul class="pl__pagination" role="navigation" aria-label="Pagination">
+				<li [class.disabled]="isFirstPage">
+					<a aria-label="Previous page" (click)="goToPrev()"><i class="material-icons">keyboard_arrow_left</i>Prev</a>
+				</li>
+				<li *ngFor="let p of pages; let i = index;" class="pl__pagination__li">
+					<a [routerLink]="['/playlist', i+1]" routerLinkActive="current" class="pl__page-index">{{ i+1 }}</a>
+				</li>
+				<li [class.disabled]="isLastPage">
+					<a aria-label="Next page" (click)="goToNext()">Next<i class="material-icons">keyboard_arrow_right</i></a>
 				</li>
 			</ul>
 		</div>
