--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -110,7 +110,7 @@ $header-font-family: $body-font-family;
 $header-font-weight: 700;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
-$header-color: inherit;
+$header-color: $oil;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
