docs: Add some comments in playlist component

--- a/src/app/playlist/playlist.component.scss
+++ b/src/app/playlist/playlist.component.scss
@@ -5,6 +5,12 @@ $small-screen-img-width: 100%;
 $medium-screen-img-width: 100%;
 $large-screen-img-width: 54%;
 $std-card-gutter: 18px;
+
+/*
+=========================================
+PLAYLIST CARD
+=========================================*/
+
 .pl-card {
 	background: #FFF;
 	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
