--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,6 +1,6 @@
 <div class="row pl-container">
 	<div class="small-12 columns">
-		<div class="pl-card">
+		<div class="mat-card">
 			<h2>My playlist</h2>
 			<ul class="pl__pagination" role="navigation" aria-label="Pagination">
 				<li [class.disabled]="isFirstPage">
@@ -32,7 +32,7 @@
 							<img src="{{ video.snippet.thumbnails.medium.url }}" alt="{{ video.snippet.title }}">
 						</picture>
 					</a>
-					<p class="pl__desc" [class.hide]="video.snippet.description.length === 0">{{ video.snippet.description | myTruncate : 180 }}</p>
+					<p class="pl__desc" [class.hide]="video.snippet.description.length === 0">{{ video.snippet.description | myTruncate : 200 }}</p>
 				</li>
 			</ul>
 			<ul class="pl__pagination" role="navigation" aria-label="Pagination">
