--- a/src/app/playlist/playlist.component.scss
+++ b/src/app/playlist/playlist.component.scss
@@ -1,34 +1,12 @@
 @import '../../styles/settings';
-$medium: map-get($breakpoints, 'medium');
-$large: map-get($breakpoints, 'large');
+
 $small-screen-img-width: 100%;
 $medium-screen-img-width: 100%;
 $large-screen-img-width: 54%;
-$std-card-gutter: 18px;
 
 /*
 =========================================
-PLAYLIST CARD
-=========================================*/
-
-.pl-card {
-	background: #FFF;
-	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-	display: block;
-	position: relative;
-	padding: 24px;
-	border-radius: 2px;
-	margin: 0 auto 1rem;
-	max-width: 380px;
-	@media screen and (min-width: $large) {
-		max-width: none;
-	}
-}
-
-
-/*
-=========================================
-PLAYLIST
+PLAYLIST GENERAL
 =========================================*/
 
 .pl-container {
@@ -41,7 +19,6 @@ ul {
 	-webkit-padding-start: 0;
 	-moz-padding-start: 0;
 }
-
 
 /*
 =========================================
@@ -124,7 +101,7 @@ PLAYLIST ITEMS
 	position: relative;
 	word-break: break-word;
 	width: 100%;
-	padding: 0 0 18px 0;
+	padding: 0 0 10px 0;
 	@media screen and (min-width: $large) {
 		float: right;
 		width: 100% - $large-screen-img-width;
@@ -136,12 +113,13 @@ PLAYLIST ITEMS
 	margin-top: 10px;
 	font-weight: 700;
 	font-size: 15px;
-	color: rgba(0, 0, 0, .57);
+	color: $secondary-text-color;
 }
 
 .pl__desc {
 	margin: $std-card-gutter 0 0;
 	display: none;
+	font-size: 15px;
 	@media screen and (min-width: $large) {
 		display: block;
 		position: absolute;
