--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,10 +1,16 @@
-<div class="row video-container">
+<div class="row video-container" (window:resize)="onResize($event)">
 	<div class="small-12 columns">
 		<div class="mat-card" *ngIf="video">
-			Video detail {{ video }}
-			<button (click)="goBack()">Back</button>
-			<iframe width="420" height="345" [src]="url">
-			</iframe>
+			<a (click)="goBack()" class="go-back-btn"><i class="material-icons">keyboard_arrow_left</i>Back to list of videos</a>
+			<div class="video__snippet">
+				<h4>
+					{{ video.snippet.title }}
+				</h4>
+				<span class="video__pubdate">Published on {{ video.snippet.publishedAt | date }}</span>
+			</div>
+			<div class="video__iframe">
+			</div>
+			<p class="video__desc" [class.hide]="video.snippet.description.length === 0">{{ video.snippet.description }}</p>
 		</div>
 	</div>
 </div>
