--- a/src/app/video/video.component.scss
+++ b/src/app/video/video.component.scss
@@ -1,3 +1,67 @@
+@import '../../styles/settings';
+
+$small-screen-iframe-width: 100%;
+$medium-screen-iframe-width: 100%;
+$large-screen-iframe-width: 60.45%;
+
+/*
+=========================================
+ViIDEO CONTAINER
+=========================================*/
+
 .video-container {
 	margin-top: -3rem;
+}
+
+
+/*
+=========================================
+VIDEO CARD
+=========================================*/
+
+.go-back-btn {
+	display: inline-block;
+	font-size: 14px;
+	font-weight: 700;
+	.material-icons {
+		vertical-align: middle;
+		font-size: 16px;
+	}
+}
+
+.video__snippet {
+	position: relative;
+	word-break: break-word;
+	width: 100%;
+	padding: 10px 0 18px 0;
+}
+
+.video__pubdate {
+	margin-top: 10px;
+	font-weight: 700;
+	font-size: 15px;
+	color: $secondary-text-color;
+}
+
+.video__iframe {
+	width: 100%;
+	width: calc(100% + 48px);
+	overflow: visible;
+	margin-left: -24px;
+	@media screen and (min-width: $large) {
+		float: left;
+		width: $large-screen-iframe-width;
+		margin-left: 0;
+	}
+}
+
+.video__desc {
+	margin: 15px 0 0;
+	font-size: 15px;
+	@media screen and (min-width: $large) {
+		float: left;
+		width: 100% - $large-screen-iframe-width;
+		margin: 0;
+		padding: 0 0 0 18px;
+	}
 }
