--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -10,3 +10,23 @@ body {
 	min-height: 100%;
 	background-color: $gray;
 }
+
+/*
+=========================================
+MATERIAL CARD
+=========================================*/
+
+.mat-card {
+	background: #FFF;
+	box-shadow: $box-shadow;
+	display: block;
+	position: relative;
+	padding: 24px;
+	border-radius: 2px;
+	margin: 0 auto 1rem;
+	max-width: 380px;
+	@media screen and (min-width: $large) {
+		max-width: none;
+	}
+	overflow: auto;
+}
