fix: Minor scss and HTML fixes

--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,7 +1,7 @@
 <div class="row pl-container">
 	<div class="small-12 columns">
 		<div class="mat-card">
-			<h2>My playlist</h2>
+			<h2 class="pl__title">My playlist</h2>
 			<ul class="pl__pagination" role="navigation" aria-label="Pagination">
 				<li [class.disabled]="isFirstPage">
 					<a aria-label="Previous page" (click)="goToPrev()"><i class="material-icons">keyboard_arrow_left</i>Prev</a>
