--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,14 @@
 @import '../styles/settings';
 
 header {
-	padding: 2.5rem 1rem 4.7rem;
+	padding: 2.5rem 0 4.7rem;
 	background: $green;
-	@media screen and (min-width: $large) {
-		padding: 4rem 1rem 6rem;
-	}
+	
 	h1 {
 		padding-left: 24px;
+	}
+
+	@media screen and (min-width: $large) {
+		padding: 4rem 0 6rem;
 	}
 }
